--- a/css/gui.css
+++ b/css/gui.css
@@ -87,9 +87,9 @@ input:checked + .slider-btn:before {
   border-radius: 50%;
   background: center/60% var(--strong-cyan) url("../images/icon-slider.svg") no-repeat;
   cursor: pointer; /* Cursor on hover */
-  box-shadow: 1px 10px;
+  box-shadow: 0px 5px 25px 0 var(--strong-cyan);
 }
-.slider:active{
+.slider::-moz-range-thumb:active{
   cursor: grabbing;
 }
   
