--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,8 @@
 }
 
 body{
-  background: var(--very-pale-blue) url("../images/bg-pattern.svg") 0/cover no-repeat;
-  background: greenyellow url("../images/bg-pattern.svg") 0/cover no-repeat;
+  /*! background: var(--very-pale-blue) url("../images/bg-pattern.svg") top left/contain no-repeat; */
+  background: greenyellow url("../images/bg-pattern.svg") top left/contain no-repeat;
   font-size: 15px;
 }
 .container{
@@ -49,12 +49,18 @@ body{
 }
 
 .window{
-  background-color: var(--white);
-  border-radius: 10px;
   display: grid;
+  
   padding: 30px;
+  
   width: 600px;
   height: 400px;
+  
+  background-color: var(--white);
+  border-radius: 10px;
+  
+  box-shadow: 0px 0px 20px 0px var(--very-pale-blue);
+  
 }
 .window .lower-side{
   display: flex;
