--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ body{
   background-color: var(--white);
   border-radius: 10px;
   
-  box-shadow: 0px 0px 20px 0px var(--very-pale-blue);
+  box-shadow: 0 0 30px 0 rgba(0,0,0,0.2);
   
 }
 .window .lower-side{
