--- a/css/gui.css
+++ b/css/gui.css
@@ -87,7 +87,7 @@ input:checked + .slider-btn:before {
   border-radius: 50%;
   background: center/60% var(--strong-cyan) url("../images/icon-slider.svg") no-repeat;
   cursor: pointer; /* Cursor on hover */
-  box-shadow: 0px 5px 25px 0 var(--strong-cyan);
+  box-shadow: 0px 10px 25px 0px var(--strong-cyan);
 }
 .slider::-moz-range-thumb:active{
   cursor: grabbing;
