Adjust margin and padding

--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,10 @@
 @media only screen and (max-width: 700px){
+  body{
+    background: var(--very-pale-blue) url("../images/bg-pattern.svg") top left/100% 40% no-repeat;
+    /*background: greenyellow url("../images/bg-pattern.svg") top left/100% 40% no-repeat;*/
+    font-size: 15px;
+  }
+  
    .window{
     width: 320px;
      height: 450px; 
@@ -23,7 +29,7 @@
 
   .upper-side{
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(4,1fr);
+    grid-template-rows: 60px 50px 70px 1fr;
     grid-template-areas: 
       "pageviews"
       "slider"
@@ -62,8 +68,14 @@
   }
   
   .intro{
+    margin: 20px 0px 20px 0px;
+    padding: 40px 0px 40px 0px;
+    font-size: 12px;
+  }
+  .intro p{
+    line-height: 1.8em;
     text-align: center;
-    font-size: 13px;
+    padding: 0px 9em;
   }
   
   
